Bug 383831 - Missing buttons for adding/removing entries in currency edit dialog
Summary: Missing buttons for adding/removing entries in currency edit dialog
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-22 08:45 UTC by Ralf Habacker
Modified: 2019-08-30 16:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-08-22 08:45:19 UTC
In Bug 383706 fragabr at gmail.com mentions that the currency edit dialog does not have buttons for adding/removing currencies. The user need to know that these functions are reachable by the context menu which is uncommon and forces user the investigate how to use this dialog. Similiar dialogs like prices or qif profile editor always have buttons for adding/removing entries.

Because the currency edit dialog already has a button for setting currency as base currency it looks that this approach does not has been finished.

How to reproduce:
1. start kmymoney
2. open Tools->Currencies

What happens:
The dialog does not has buttons for adding/removing entries

What is expected ?
The dialog should has buttons for adding/removing entries
Comment 1 wojnilowicz 2017-08-22 12:49:57 UTC
Please look at
https://phabricator.kde.org/D5271
and determine if it's worth having this bug open for 4.8.
Comment 2 Ralf Habacker 2017-08-25 06:48:00 UTC
(In reply to NSLW from comment #1)
> Please look at
> https://phabricator.kde.org/D5271
> and determine if it's worth having this bug open for 4.8.
I think this patch is too big to be applied to 4.8 and contains unrelated stuff which will break present functionality and requires too much work to test. 

For a dedicated patch for this issue see https://git.reviewboard.kde.org/r/130234/
Comment 3 Ralf Habacker 2017-08-25 06:52:28 UTC
Git commit b5c4ff902e2d541f09010f510408dd00b5ff6f6b by Ralf Habacker.
Committed on 25/08/2017 at 06:52.
Pushed by habacker into branch '4.8'.

Fix 'Missing buttons for adding/removing entries in currency edit dialog'

FIXED-IN:4.8.1
REVIEW:130234

M  +12   -1    kmymoney/dialogs/kcurrencyeditdlg.cpp
M  +3    -0    kmymoney/dialogs/kcurrencyeditdlg.h
M  +2    -0    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/b5c4ff902e2d541f09010f510408dd00b5ff6f6b