Fix 'Missing buttons for adding/removing entries in currency edit dialog'

FIXED-IN:4.8.1
BUG:383831
REVIEW:130234